# metron-bro-plugin-kafka

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md  VERSION  configure  configure.plugin
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: FindLibRDKafka.cmake
dev_utilities/release-utils/: metron-bro-kafka-rc-check
docker/: README.md  docker-compose.yml  example_script.sh  finish_end_to_end.sh  remove_timeout_message.sh  run_end_to_end.sh  run_test.sh  run_test.sh.template
docker/in_docker_scripts/: build_bro.sh  build_bro_plugin.sh  build_plugin.sh  configure_bro_plugin.sh  configure_plugin.sh  process_data_dir.sh  process_data_file.sh  wait-for-it.sh  wait_for_kafka.sh  wait_for_zk.sh
docker/scripts/: analyze_results.sh  build_bro_plugin_docker.sh  build_container.sh  cleanup_containers.sh  cleanup_docker.sh  configure_bro_plugin_docker.sh  consume_bro_kafka.sh  create_bro_topic_in_kafka.sh  create_docker_network.sh  destroy_docker_network.sh  docker_execute_build_bro_plugin.sh  docker_execute_build_plugin.sh  docker_execute_configure_bro_plugin.sh  docker_execute_configure_plugin.sh  docker_execute_configure_zeek_plugin.sh  docker_execute_create_topic_in_kafka.sh  docker_execute_process_data_dir.sh  docker_execute_process_data_file.sh  docker_execute_shell.sh  docker_run_bro_container.sh  docker_run_consume_bro_kafka.sh  docker_run_consume_kafka.sh  docker_run_create_bro_topic_in_kafka.sh  docker_run_create_topic_in_kafka.sh  docker_run_get_offset_bro_kafka.sh  docker_run_get_offset_kafka.sh  docker_run_kafka_container.sh  (+15 more)
scripts/: __load__.bro  __load__.zeek  init.bro  init.zeek
src/: KafkaWriter.cc  KafkaWriter.h  Plugin.cc  Plugin.h  TaggedJSON.cc  TaggedJSON.h  events.bif  kafka.bif  kafka_const.bif
tests/: btest.cfg
(+58 files in other folders)
